change theme name

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     map_start_location = map_start_location.map(Number);
                 }
 
-                var style_file = 'scene/main.yaml';
+                var style_file = 'tron.yaml';
                 var info_file = '';
                 var url_search = window.location.search.slice(1);
                 if (url_search.length > 0) {
