--- a/index.html
+++ b/index.html
@@ -39,53 +39,102 @@
             position: absolute;
         }
 
+        .label {
+            width: auto;
+            /*margin-left: -100px;*/
+            position: absolute;
+            z-index: 500;
+            text-align: left;
+            margin: 10px;
+            /*background: #E1E1E1;*/
+            background: rgba(3,3,3,0.6);
+            opacity: 0.9;
+            padding: 2px;
+            visibility: hidden;
+            /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
+            /*word-wrap: break-word;*/
+        }
+        .label a {
+            color: white;
+        }
 
-    .label {
-        width: auto;
-        /*margin-left: -100px;*/
-        position: absolute;
-        z-index: 500;
-        text-align: left;
-        margin: 10px;
-        background: #E1E1E1;
-        opacity: 0.9;
-        padding: 2px;
-        visibility: hidden;
-        /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
-        /*word-wrap: break-word;*/
-    }
-    .label a {
-        color: white;
-    }
+        .label a:hover {
+            color: lightblue;
+        }
 
-    .label a:hover {
-        color: lightblue;
-    }
+        .labelInner {
+            padding: 3px 0px;
+            font-family: Helvetica, sans-serif;
+            font-weight: bold;
+            font-size: 12px;
+            color: white;
+            opacity: 2.0;
+            margin: 0px;
+        }
 
-    .labelInner {
-        padding: 3px 0px;
-        font-family: Helvetica, sans-serif;
-        font-weight: bold;
-        font-size: 12px;
-        color: #666;
-        opacity: 2.0;
-        margin: 0px;
-    }
+        .labelLine {
+            /*border: 2px solid gold;*/
+        }
 
-    .labelLine {
-        /*border: 2px solid gold;*/
-    }
+        .labelLine:hover {
+            /* border: 2px solid gold; */
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            cursor: default;
+        }
 
-    .labelLine:hover {
-        /* border: 2px solid gold; */
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        cursor: default;
-    }
+        .title {
+            text-align: center;
+            font-weight: bold;
+            color: white; 
+            margin-left: 6px;
+        }
+
+        hr {
+            border: 0;
+            height: 1px;
+            background: rgba(255,255,255,0.5);
+        }
+
+        .coorner {
+            position: absolute;
+            background-color: rgba(255,255,255,0.0);
+            width: 10px;
+            height: 10px;
+            z-index: 103;
+        }
+
+        div#coorner-top-left {
+            top: -2px;
+            left: -2px;
+            border-top: 2px solid rgba(255,255,255,0.7);
+            border-left: 2px solid rgba(255,255,255,0.7);
+        }
+
+        div#coorner-top-right {
+            top: -2px;
+            right: -2px;
+            border-top: 2px solid rgba(255,255,255,0.7);
+            border-right: 2px solid rgba(255,255,255,0.7);
+        }
+
+        div#coorner-bottom-left {
+            bottom: -2px;
+            left: -2px;
+            border-bottom: 2px solid rgba(255,255,255,0.7);
+            border-left: 2px solid rgba(255,255,255,0.7);
+        }
+
+        div#coorner-bottom-right {
+            bottom: -2px;
+            right: -2px;
+            border-bottom: 2px solid rgba(255,255,255,0.7);
+            border-right: 2px solid rgba(255,255,255,0.7);
+        }
 
     </style>
 
