--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <!-- 3rd party libraries -->
         <!-- Leaflet -->
-        <link rel="stylesheet" href="src/leaflet.css" />
-        <script src="src/leaflet.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.3/leaflet.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.3/leaflet.js"></script>
         <!-- bog-standard leaflet URL hash -->
         <script type="text/javascript" src="https://cdn.rawgit.com/mlevans/leaflet-hash/master/leaflet-hash.js"></script>
         <!-- Main tangram library -->
