--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    
+
     <title>Tron 2.0</title>
 
     <!-- 3rd party libraries -->
         <!-- Leaflet -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.3/leaflet.css" />
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.3/leaflet.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css" />
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.js"></script>
         <!-- bog-standard leaflet URL hash -->
         <script type="text/javascript" src="https://cdn.rawgit.com/mlevans/leaflet-hash/master/leaflet-hash.js"></script>
         <!-- Main tangram library -->
@@ -96,7 +96,7 @@
         .title {
             text-align: center;
             font-weight: bold;
-            color: white; 
+            color: white;
             margin-left: 6px;
         }
 
@@ -236,7 +236,7 @@
 
                 var layer = Tangram.leafletLayer({
                                 scene: 'tron.yaml',
-                                attribution: '| &copy; OSM contributors | <a href="https://mapzen.com/tangram" target="_blank">Tangram</a> | <a href="https://twitter.com/sensescape" target="_blank">@sensescape</a> | <a href="https://twitter.com/patriciogv" target="_blank">@patriciogv</a>'
+                                attribution: '| <a href="https://mapzen.com/tangram" target="_blank">Tangram</a> | &copy; OSM contributors'
                             });
 
                 window.layer = layer;
@@ -344,7 +344,7 @@
 
                 function mapzenTileURL() {
                     // find minimum max_zoom of all sources
-                    var max_zoom = 21;
+                    var max_zoom = 16;
                     for (source in scene.config.sources) {
                         if (scene.config.sources.hasOwnProperty(source)) {
                             if (scene.config.sources[source].max_zoom != "undefined") {
@@ -355,7 +355,7 @@
                     var zoom = max_zoom < map.getZoom() ? max_zoom : Math.floor(map.getZoom());
                     var tileCoords = { x : long2tile(latlng.lng,zoom), y: lat2tile(latlng.lat,zoom), z: zoom };
 
-                    var url = 'http://vector.mapzen.com/osm/all/' + zoom + '/' + tileCoords.x  + '/' + tileCoords.y + '.topojson?api_key=vector-tiles-HqUVidw';
+                    var url = 'http://tile.dev.mapzen.com/mapzen/vector/v1/all/' + zoom + '/' + tileCoords.x  + '/' + tileCoords.y + '.topojson';
                     return url;
                 }
 
@@ -477,6 +477,9 @@
                             if( timer ) { clearTimeout( timer ); timer = null; }
                             timer = setTimeout( function() {
                                 picking = true;
+
+                                latlng = selection.leaflet_event.latlng;
+
                                 if( key.cmd || key.alt ) {
                                     window.open( mapzenTileURL(), '_blank' );
                                 } else {
@@ -577,7 +580,7 @@
                 });
 
                 return map;
-            }());            
+            }());
         </script>
 
         <!-- Adding a script block to post message to the parent container (think iframed demos) -->
