--- a/index.html
+++ b/index.html
@@ -457,6 +457,28 @@
                     };
                     gui.add(gui, 'save_screenshot');
 
+                    // Take a video capture and save to file
+                    if (typeof window.MediaRecorder == 'function') {
+                        gui.video = function () {
+                            if (!gui.video_capture) {
+                                if (scene.startVideoCapture()) {
+                                    gui.video_capture = true;
+                                    gui.video_button.name('stop video');
+                                }
+                            }
+                            else {
+                                return scene.stopVideoCapture().then(function(video) {
+                                    gui.video_capture = false;
+                                    gui.video_button.name('capture video');
+                                    saveAs(video.blob, 'tangram-video-' + (+new Date()) + '.webm');
+                                });
+                            }
+                        };
+                        gui.video_button = gui.add(gui, 'video');
+                        gui.video_button.name('capture video');
+                        gui.video_capture = false;
+                    }
+
                     // Link to edit in OSM - hold 'e' and click
                     map.getContainer().addEventListener('dblclick', function (event) {
                         //console.log( 'dblclick was had' );
