--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         <script>
                 MPZN.bug({
                 name: 'Tron 2.0',
-                tweet: 'Tron 2.0 by @sensescape @patriciogv',
+                tweet: 'Tron 2.0',
                 repo: 'https://github.com/tangrams/tron/'
             });
         </script>
