--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         var layer = Tangram.leafletLayer({
             scene: 'tron.yaml',
-            attribution: '| <a href="https://mapzen.com/tangram" target="_blank">Tangram</a> | &copy; OSM contributors'
+            attribution: '<a href="https://mapzen.com/tangram" target="_blank">Tangram</a>, &copy; OSM contributors'
         });
 
         var scene = layer.scene;
