--- a/index.html
+++ b/index.html
@@ -403,13 +403,15 @@
                 scene.config.global.text_visible_pois_landuse = _val;
                 scene.config.global.icon_visible_pois_landuse = _val;
                 scene.config.global.text_visible_island = _val;
-                if( _val ) {
-                    scene.config.global.building_style = 'buildings_with_labels';
-                    scene.config.global.building_lines_with_or_without_labels = '[0.512,0.594,0.840]';
-                } else {
-                    scene.config.global.building_style = 'buildings_no_labels';
-                    scene.config.global.building_lines_with_or_without_labels = '[0.649,0.785,0.801]';
-                }
+                // Oct. 7, 2016
+                //need to rework this, upon switching back to labels, buildings stay light and labels dont read 
+                // if( _val ) {
+                //     scene.config.global.building_style = 'buildings_with_labels';
+                //     scene.config.global.building_lines_with_or_without_labels = '[0.512,0.594,0.840]';
+                // } else {
+                //     scene.config.global.building_style = 'buildings_no_labels';
+                //     scene.config.global.building_lines_with_or_without_labels = '[0.567,0.658,0.930]';
+                // }
                 scene.updateConfig();
                 //window.location.search = 'language=' + value;
             });
