building, address labels, road shields, fix forest icon, do-not-show no-name parks, are wilderness areas green

--- a/index.html
+++ b/index.html
@@ -402,7 +402,6 @@
             });
             gui.fallback_button.name('lang fallback');
 
-
             // Labels selector
             var labels = {
                 '(default)': 'more',
@@ -469,14 +468,15 @@
                 scene.config.global.text_visible_minor_road_e = _default;
                 scene.config.global.text_visible_exits_e = _default;
 
-                scene.config.text_visible_aerialway = _default;
+                scene.config.global.text_visible_aerialway = _default;
                 scene.config.global.text_visible_airport_gate = _default;
                 scene.config.global.text_visible_exits = _default;
 
-                scene.config.global.text_visible_buildings = _default;
-                scene.config.global.text_visible_addresses = _default;
+                scene.config.global.text_visible_building = _more;
+                scene.config.global.text_visible_address = _more;
 
                 scene.config.global.label_visible_poi_landuse = _more;
+                scene.config.global.text_visible_poi_landuse = _more;
                 scene.config.global.label_visible_poi_landuse_e = _more;
                 scene.config.global.icon_visible_poi_landuse = _more;
                 scene.config.global.icon_visible_poi_landuse_e = _more;
@@ -485,7 +485,7 @@
 
                 scene.config.global.icon_visible_landuse_green = _default;
                 scene.config.global.text_visible_landuse_green = _default;
-                scene.config.global.text_visible_landuse_generic = _default;
+                scene.config.global.text_visible_landuse_generic = _more;
                 if( _more ) {
                     scene.config.global.icon_size_green = [[13, '14px'], [16, '18px'], [18, '19px']];
                     scene.config.global.icon_size_green_nationl_park = [[10,'18px'],[12,'28px'],[13,'36px']];
@@ -521,7 +521,7 @@
             gui.transit_button = gui.add(gui, 'transit_overlay', transit_overlay).onChange(function(value) {
                 scene.config.global.sdk_transit_overlay = (value === 'true' || value === true); // dat.gui passes a string
                 if (value === 'true' || value === true) {
-                    scene.config.global.sdk_shield_visible = false;
+                    scene.config.global.sdk_road_shields = false;
                 } else {
                     if( scene.config.global.text_visible_roads ) {
                         scene.config.global.sdk_road_shields = true;
@@ -729,6 +729,7 @@
         <script>
                 MPZN.bug({
                 name: 'Tron 2.0',
+                link: 'https://github.com/tangrams/tron/'
                 tweet: 'Tron 2.0',
                 repo: 'https://github.com/tangrams/tron/'
             });
